Bound a search's size from above
